# liveforever-buildweek

./: .gitignore  CASE_STUDY.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: pages.yml
agents/: openai.yaml
demo/: analysis.json  index.html
docs/: BUILD_WEEK_PROVENANCE.md  DEMO_SCRIPT.md  DEVPOST_SUBMISSION.md  SUBMISSION_CHECKLIST.md  TECHNICAL_METHOD.md
examples/: maya_daily.csv  maya_genome.txt  maya_labs.json
src/liveforever_lab/: __init__.py  analysis.py  cli.py  genomics.py  phenoage.py  planner.py  synthetic.py
tests/: test_analysis.py  test_context.py
