[project]
name = "liveforever-lab"
version = "0.2.0"
description = "A privacy-first personal evidence lab for longitudinal wellness experiments"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
liveforever-demo = "liveforever_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liveforever_lab"]

